--- a/client/src/component/SubscriptionPlan/subscriptionPlan.css
+++ b/client/src/component/SubscriptionPlan/subscriptionPlan.css
@@ -11,7 +11,8 @@
 .subscription-title {
     font-size: 3rem;
     font-weight: 900;
-    color: #000;
+    color: #ff0000;
+    text-decoration: underline;
 }
 
 .plan-details {
@@ -20,34 +21,30 @@
 
 
 .plan {
-    /* background-color: #ff0000; */
     background-color: #000;
     padding: 2rem;
     margin: 2rem;
     width: 180px;
     text-align: center;
-    border: 1.5px solid black;
+    border: 1.5px solid white;
+
     transition: transform .2s;
     border-radius: 5%;
 }
 
 .plan:hover {
     transform: scale(1.2);
-    /* border: 2px solid rgb(136, 16, 136); */
     border: 1px solid #ff0000;
 
 }
 
 .plan h1 {
     font-size: 2rem;
-    /* color: #000; */
-    /* color: white; */
     color: #ff0000;
     margin-bottom: 10px;
 }
 
 button {
-    /* background-color: #007bff; */
     background-color: #ff0000;
     color: #fff;
     font-weight: 500;
@@ -61,10 +58,8 @@ button {
 }
 
 button:hover {
-    /* border: 2px solid rgb(136, 16, 136); */
     border: 2px solid #ff0000;
     color: #000;
-    /* background-color: white; */
 }
 
 @media (max-width: 768px) {
